[tool.poetry]
name = "loose"
version = "0.1.7"
description = "A simple tool to apply XrandR configurations"
authors = ["Gürkan <gitoperations@gurkan.in>"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"
jc = "^1.23.6"
pyyaml = "^6.0.1"
xdg-base-dirs = "^6.0.1"
pyedid = "^1.0.3"
yamale = "^4.0.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
shtab = "^1.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loose = 'loose.loose:main'
